CHATS_SIT/force-app/main/default/objects/T_COUNTY__c.object
<CustomObject>
    <description>County</description>
    <fields>
        <fullName>CCCAP_WEBSITE_ADDR__c</fullName>
        <description>CCCAP Website Address</description>
        <label>CCCAP Website Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <description>County Code</description>
        <externalId>true</externalId>
        <label>County Code</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CNTY_DEPT_NAME__c</fullName>
        <description>County Department Name</description>
        <label>County Department Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>County</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CDE_COUNTY__c</columns>
        <columns>CNTY_DEPT_NAME__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Data_Load</fullName>
        <columns>NAME</columns>
        <columns>CDE_COUNTY__c</columns>
        <columns>CNTY_DEPT_NAME__c</columns>
        <columns>CCCAP_WEBSITE_ADDR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>contains</operation>
            <value>bharadwaj</value>
        </filters>
        <label>Data Load</label>
    </listViews>
  <nameField>
        <displayFormat>{0}</displayFormat>
        <label>County Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>County</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>