CHATS_SIT/force-app/main/default/objects/T_COUNTY__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CDE_COUNTY__c</columns>
    <columns>CNTY_DEPT_NAME__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>