CHATS_SIT/force-app/main/default/objects/T_COUNTY__c/listViews/Data_Load.listView-meta.xml
<ListView>
    <fullName>Data_Load</fullName>
    <columns>NAME</columns>
    <columns>CDE_COUNTY__c</columns>
    <columns>CNTY_DEPT_NAME__c</columns>
    <columns>CCCAP_WEBSITE_ADDR__c</columns>
    <filterScope>Everything</filterScope>
    <label>Data Load</label>
</ListView>